# Octopoda-OS

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  init.sql  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ACID.md  API.md  ARCHITECTURE.md  BENCHMARKS.md  QUICKSTART.md  RELEASE.md
examples/: README.md  continuous_agent_test.py  features_test.py  first_five_minutes.py  framework_comparison_demo.py  local_only.py  loop_detection_demo.py  real_agent_test.py  search_test.py
octopoda/: __init__.py
openclaw-skill/: LICENSE  README.md  install.py
openclaw-skill/octopoda-memory/: SKILL.md
synrix/: __init__.py  __main__.py  advanced_retrieval_tricks.py  agent_auto_save.py  agent_backend.py  agent_context_restore.py  agent_failure_tracker.py  agent_hooks.py  agent_integration.py  agent_memory.py  agent_memory_layer.py  ai_memory.py  assistant_memory.py  auto_memory.py  auto_organizer.py  cli.py  client.py  cloud.py  cursor_integration.py  direct_client.py  embeddings.py  engine.py  exceptions.py  extractor.py  fact_extractor.py  feedback.py  hierarchical_organizer.py  licensing.py  memory.py  mock.py  postgres_client.py  simplified_hierarchical_organizer.py  sqlite_client.py  storage_formats.py  telemetry.py  track_growth.py  usage_report.py  vector_index.py
synrix/examples/: tour.py
synrix/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  openai_agents.py
synrix/langchain/: __init__.py  synrix_langgraph_memory.py  synrix_prefix_retriever.py  synrix_vectorstore.py
synrix_runtime/: README.md  __init__.py  auth_flow.py  config.py  log.py  start.py
synrix_runtime/api/: __main__.py  auth.py  billing.py  cloud_client.py  cloud_models.py  cloud_server.py  mcp_server.py  runtime.py  shared_memory.py  system_calls.py  task_bus.py  tenant.py
synrix_runtime/cli/: synrix_cli.py
synrix_runtime/core/: daemon.py  gc.py  heartbeat.py  namespace.py  recovery.py  registry.py
synrix_runtime/dashboard/: api_routes.py  app.py  sse.py
synrix_runtime/dashboard/static/: index.html
synrix_runtime/demo/: crash_recovery_demo.py  multi_crew_demo.py  openai_agents_demo.py  three_agent_demo.py
synrix_runtime/integrations/: autogen_memory.py  crewai_memory.py  langchain_memory.py  openai_agents.py
synrix_runtime/monitoring/: anomaly.py  audit.py  brain.py  cost_models.py  metrics.py  performance.py
tests/: conftest.py  run_load_test.py  test_backend.py  test_cloud_api.py  test_cloud_dashboard_api.py  test_comprehensive.py  test_daemon.py  test_e2e_tenant_isolation.py  test_extractor.py  test_fact_extractor.py  test_full_audit.py  test_gc.py  test_integrations.py  test_knowledge_graph.py  test_licensing.py  test_live_api.py  test_live_full.py  test_load.py  test_mcp_server.py  test_memory.py  test_real_customer.py  test_runtime.py  test_semantic_search.py  test_sqlite.py  test_temporal.py  test_validation.py
tools/: README.md  crash_recovery_demo.sh  crash_test.c  generate_license_key.py  query_latency_diagnostic.c  run_extended_p99_benchmark.sh  run_query_latency_diagnostic.sh  wal_test.c
(+7 files in other folders)
