[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octopoda"
version = "3.0.3"
description = "Persistent Memory Kernel for AI Agents — crash recovery, shared memory, audit trail, real-time dashboard"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "RYJOX Technologies", email = "ryjoxtechnologies@gmail.com"}
]
keywords = [
    "ai-memory", "agent-memory", "persistent-memory",
    "langchain", "crewai", "autogen", "openai-agents",
    "crash-recovery", "multi-agent", "memory-kernel",
    "semantic-search", "knowledge-graph", "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
client = [
    "requests>=2.28.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "psycopg2-binary>=2.9.0",
]
mcp = [
    "mcp>=1.0.0",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
]
ai = [
    "sentence-transformers>=2.0.0",
    "numpy>=1.21.0",
]
search = [
    "faiss-cpu>=1.7.0",
    "numpy>=1.21.0",
]
nlp = [
    "spacy>=3.5.0",
]
all-ai = [
    "sentence-transformers>=2.0.0",
    "numpy>=1.21.0",
    "spacy>=3.5.0",
    "faiss-cpu>=1.7.0",
]
telemetry = ["psutil>=5.9.0"]
all = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "mcp>=1.0.0",
    "sentence-transformers>=2.0.0",
    "numpy>=1.21.0",
    "spacy>=3.5.0",
    "faiss-cpu>=1.7.0",
    "psutil>=5.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/RYJOX-Technologies/Octopoda"
Documentation = "https://github.com/RYJOX-Technologies/Octopoda#readme"
Repository = "https://github.com/RYJOX-Technologies/Octopoda"

[project.scripts]
octopoda = "synrix_runtime.start:main"
octopoda-mcp = "synrix_runtime.api.mcp_server:main"
octopoda-login = "synrix_runtime.auth_flow:_cli_login"

[tool.setuptools.packages.find]
where = ["."]
include = ["octopoda*", "synrix*", "synrix_runtime*"]
exclude = ["tests*", "archive*", "python-sdk*"]

[tool.setuptools.package-data]
octopoda = ["py.typed"]
synrix = ["py.typed"]
synrix_runtime = ["dashboard/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
